<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/box_selected"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27">

        <RadioButton
            android:id="@+id/rbCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/create" />

        <RadioButton
            android:id="@+id/rbJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/join" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCreateJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/join"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="@+id/tiEnterRoomID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tiEnterRoomID" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEnterRoomID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toStartOf="@+id/btnCreateJoin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEnterPlayerName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterRoomID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:hint="@string/enter_room_id"
            android:inputType="number"
            android:padding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEnterPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEnterPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLight"
            android:hint="@string/enter_name"
            android:padding="8dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_selected"
        android:padding="16dp"
        android:text="@string/bingo"
        android:textColor="@color/colorLight"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>